@@ -1,3 +1,8 @@
+2013-09-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Partial workaround for linker bug #2198.
+
 2013-09-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
